--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,21 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/variables';
+@import './components/common';
+@import './components/container';
+@import './components/header';
+@import './components/filters-genres';
+@import './components/hero';
+@import './components/footer';
+@import './components/on-top';
+@import './components/theme';
+@import './components/card';
+@import './components/card-modal';
+@import './components/preloader';
+@import './components/trailers';
+@import './components/slider';
+@import './components/pages-numbers';
+@import './components/spinner';
+@import './components/visually-hidden';
+@import './components/translate';
